2011-01-31  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Add debug info.

	* include/network/Handler.tcc: Support returning all models when
	getting k=0.
	* src/network/OutputThread.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/network/OutputThread.h: Likewise.

	* include/network/ConcurrentMessageQueueFactory.h: Add DEFAULT_PACK_SIZE.

2011-01-30  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/Handler.tcc: Propagate TERMINATE messages.
	* include/dmcs/StreamingDMCS.h: Likewise.
	* include/network/NeighborThread.h: Likewise.
	* include/network/NeighborOut.h: Likewise.
	* include/network/RouterThread.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.

	* include/network/ConcurrentMessageQueueFactory.h: Support for max queue size.
	* src/network/ConcurrentMessageQueueFactory.cpp: Likewise.
	* testsuite/testJoinThread.cpp: Likewise.
	* testsuite/testInterfaceRelSat.cpp: Likewise.
	* testsuite/testMessagingGateway.cpp: Likewise.

	* testsuite/testJoinThread.cpp: Interrupt thread.

	* testsuite/testInterfaceRelSat.cpp: Fix FTBFS.

	* testsuite/testJoinThread.cpp: Likewise.

	* src/network/OutputThread.cpp: Fix warning.

	* include/network/AsynClient.h (handle_read_header): Clean-up.
	* include/network/BaseClient.h: Likewise.
	* include/network/Client.h: Likewise.
	* include/network/Client.tcc: Likewise.

2011-01-30  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/network/OutputThread.cpp: Return EOF to user immediately
	after having all results.

	* include/network/NeighborThread.h: Inform JoinIn before sending
	models, in order not to be blocked by the size of MQs.

	* include/network/Handler.tcc: Pass invoker to OutputThread.
	* include/network/OutputThread.h: Likewise.

	* src/solver/RelSatSolver.cpp: Add debug info.
