@@ -13,6 +13,30 @@
 
 using namespace dmcs;
 
+void
+print_new_conflicts(const ConflictBufVecPtr& learned_conflicts, const ConflictBufIterVecPtr& new_conflicts_beg)
+{
+  std::size_t off = 0;
+  for (ConflictBufVec::const_iterator it = learned_conflicts->begin(); 
+       it != learned_conflicts->end(); ++it, ++off)
+    {
+      ConflictBufPtr cb = *it;
+      ConflictBuf::iterator jt = (*new_conflicts_beg)[off];
+      if (jt == cb->end())
+	{
+	  DMCS_LOG_DEBUG("offset[" << off << "]: NONE");
+	}
+      else
+	{
+	  DMCS_LOG_DEBUG("offset[" << off << "]:");
+	  for (; jt != cb->end(); ++jt)
+	    {
+	      DMCS_LOG_DEBUG(**jt);
+	    }
+	}
+    }
+}
+
 
 BOOST_AUTO_TEST_CASE ( testInterfaceRelSat )
 {
@@ -76,16 +100,54 @@ BOOST_AUTO_TEST_CASE ( testInterfaceRelSat )
   DMCS_LOG_DEBUG("Original theory: ");
   rss.print_local_theory();
 
-  std::string clauses_list = "1 -2\n 1 3\n -3 4\n 4 6\n 5 -6\n -5 6\n";
-  std::stringstream iss(clauses_list);
-  ClauseList cl;
-  iss >> cl;
+  std::string clauses_list1 = "1 -2\n 1 3\n -3 4\n 4 6\n 5 -6\n -5 6\n";
+  std::stringstream iss(clauses_list1);
+  ClauseList cl1;
+  iss >> cl1;
 
-  rss.collect_learned_clauses(cl);
+  std::string clause_list2 = "1 2\n 3 -4\n -3 4\n 5 -6\n 5 6\n";
+  iss.clear();
+  iss.str(clause_list2);
+  ClauseList cl2;
+  iss >> cl2;
 
-  DMCS_LOG_DEBUG("Learning conflicts: ");
-  ConflictVec2Ptr learned_conflicts = rss.getLearnedConflicts();
-  DMCS_LOG_DEBUG(learned_conflicts);
+  std::string clause_list3 = "-3 4\n -5 -6\n";
+  iss.clear();
+  iss.str(clause_list3);
+  ClauseList cl3;
+  iss >> cl3;
+
+  DMCS_LOG_DEBUG("Going to learn");
+
+  rss.collect_learned_clauses(cl1);
+
+  DMCS_LOG_DEBUG("After learning first set of conflicts: ");
+  ConflictBufVecPtr learned_conflicts = rss.getLearnedConflicts();
+  DMCS_LOG_DEBUG(*learned_conflicts);
+
+  rss.collect_learned_clauses(cl2);
+
+  DMCS_LOG_DEBUG("After learning second set of conflicts: ");
+  learned_conflicts = rss.getLearnedConflicts();
+  DMCS_LOG_DEBUG(*learned_conflicts);
+
+
+  DMCS_LOG_DEBUG("New learned conflicts:");
+  ConflictBufIterVecPtr new_conflicts_beg = rss.getNewLearnedConflicts();
+  print_new_conflicts(learned_conflicts, new_conflicts_beg);
+
+  rss.collect_learned_clauses(cl3);
+
+  DMCS_LOG_DEBUG("After learning second set of conflicts: ");
+  learned_conflicts = rss.getLearnedConflicts();
+  DMCS_LOG_DEBUG(*learned_conflicts);
+
+
+  DMCS_LOG_DEBUG("New learned conflicts:");
+  new_conflicts_beg = rss.getNewLearnedConflicts();
+  print_new_conflicts(learned_conflicts, new_conflicts_beg);
+
+  ///////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
   ConflictVec* conflicts = new ConflictVec;
 
