@@ -1,3 +1,9 @@
+2011-01-31  Minh Dao Tran  <dao@kr.tuwien.ac.at>
+
+	* SATSolver.h: Return learned clauses.
+
+	* RelSatHelper.h: Comment out.
+
 2011-01-25  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
 	* RelSatHelper.h: Add operator>> for ClauseList.
